crates/compiler/src/tests/e2e/good/0229_generic_type_usage/main.gom
fn id[T](x: T) -> T { x }

fn main() {
    let a: uint8 = id(id(42));
    println((a).to_string());
}
